@@ -109,7 +109,17 @@
 #'  
 #' plot(M2)
 #' 
-#' 
+#' ## Change mapping icons
+#' M3 <- gvisMap(df, "Postcode", "Tip",
+#'               options=list(showTip=TRUE, mapType='normal',
+#'               enableScrollWheel=TRUE,
+#'               icons="{
+#'               'default': {'normal': 'http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png',
+#'                           'selected': 'http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Right-Azure-icon.png'
+#'                           }}"))
+#'                         
+#' plot(M3)
+
 gvisMap <- function(data, locationvar="", tipvar="",options=list(), chartid){
 
   my.type <- "Map"
